unpackaged/main/default/objects/Account/fields/A_R_Balance__c.field-meta.xml
<CustomField>
    <fullName>A_R_Balance__c</fullName>
    <formula>Current_Due__c + Under_30_Due__c + Under_60_Due__c + X60_and_Over_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total customer A/R balance including current and past due</inlineHelpText>
    <label>A/R Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>