unpackaged/main/default/objects/Account/fields/Account_Level__c.field-meta.xml
<CustomField>
    <fullName>Account_Level__c</fullName>
    <label>Account Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Key Account</fullName>
                <label>A</label>
            </value>
            <value>
                <fullName>Intermediate Account</fullName>
                <label>B</label>
            </value>
            <value>
                <fullName>Standard Account</fullName>
                <label>C</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>