unpackaged/main/default/objects/Account/fields/Account_Rep__c.field-meta.xml
<CustomField>
    <fullName>Account_Rep__c</fullName>
    <formula>Sales_Rep__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Rep</label>
    <type>Text</type>
</CustomField>