unpackaged/main/default/objects/Account/fields/Account_Sales_Rep_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Sales_Rep_Manager__c</fullName>
    <formula>Sales_Rep__r.Manager__r.FirstName + &quot; &quot;+ Sales_Rep__r.Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is because the FM&#39;s are managed by two people both RM&#39;s and some sales managers. This will allow sales managers to see FM&#39;s sales that are attached to them</inlineHelpText>
    <label>Account Sales Rep Manager</label>
    <type>Text</type>
</CustomField>