unpackaged/main/default/objects/Account/fields/Account_Updates__c.field-meta.xml
<CustomField>
    <fullName>Account_Updates__c</fullName>
    <inlineHelpText>You can use this field to indicate a comment of why the YOY Sales are lower or higher than expected based on previous year sales</inlineHelpText>
    <label>Account Updates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>