unpackaged/main/default/objects/Account/fields/Active_Sales_Goal__c.field-meta.xml
<CustomField>
    <fullName>Active_Sales_Goal__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Sales Goal</label>
    <type>Checkbox</type>
</CustomField>