unpackaged/main/default/objects/Account/fields/Actual_FY_Sales__c.field-meta.xml
<CustomField>
    <fullName>Actual_FY_Sales__c</fullName>
    <label>This FY Sales</label>
    <summarizedField>Sales_Document__c.Product_Sub_Total__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_Document__c.Doc_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>10/1/2021</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Document__c.Doc_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>9/30/2022</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Document__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>