unpackaged/main/default/objects/Account/fields/Actual_Last_FY_Sales__c.field-meta.xml
<CustomField>
    <fullName>Actual_Last_FY_Sales__c</fullName>
    <description>Filtered Roll-Up Summary instead of Currency updated by Roll-Up Helper</description>
    <inlineHelpText>Date Range: 10/1/2020 - 9/30/2021</inlineHelpText>
    <label>Last FY Sales</label>
    <summarizedField>Sales_Document__c.Product_Sub_Total__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_Document__c.Doc_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>10/1/2020</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Document__c.Doc_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>9/30/2021</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Document__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>