unpackaged/main/default/objects/Account/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <description>Additional Notes about why the Customer is Inactive or Stale</description>
    <inlineHelpText>Any additional notes about why the Customer is no longer active that might be helpful in winning them back.</inlineHelpText>
    <label>Additional Notes</label>
    <type>TextArea</type>
</CustomField>