unpackaged/main/default/objects/Account/fields/Aerator_Brand__c.field-meta.xml
<CustomField>
    <fullName>Aerator_Brand__c</fullName>
    <description>Aerator Brands the Account uses</description>
    <inlineHelpText>What Aerator Brands do they use?</inlineHelpText>
    <label>Aerator Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>