unpackaged/main/default/objects/Account/fields/Aerator_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Aerator_Quantity__c</fullName>
    <description>Number of Aerators the Account uses</description>
    <inlineHelpText>How many Aerators do they have?</inlineHelpText>
    <label>Aerator Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>