unpackaged/main/default/objects/Account/fields/Annual_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Annual_Catalog__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ATS Product Catalog</label>
    <type>Checkbox</type>
</CustomField>