unpackaged/main/default/objects/Account/fields/Approved_Signer__c.field-meta.xml
<CustomField>
    <fullName>Approved_Signer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Contact at this Account that will be the Signer for CongaSign documents</description>
    <label>Approved Signer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please Choose a Contact from the current Account</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Approved Signer)</relationshipLabel>
    <relationshipName>SignAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>