unpackaged/main/default/objects/Account/fields/Associate_Rep__c.field-meta.xml
<CustomField>
    <fullName>Associate_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>An Associate Sales Rep for this Customer in addition to the Primary Sales Rep (Optional)</inlineHelpText>
    <label>Associate Rep</label>
    <referenceTo>Sales_Rep__c</referenceTo>
    <relationshipLabel>Customers (Associate Rep)</relationshipLabel>
    <relationshipName>Assoc_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>