unpackaged/main/default/objects/Account/fields/Associate_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Associate_Rep_Name__c</fullName>
    <description>Associate Rep Name must match the name on the Sales Rep&#39;s record in order for sharing to work - THIS FIELD UPDATED BY TRIGGER</description>
    <inlineHelpText>The associate reps that also can update this Customer (in addition to Primary Sales Rep)</inlineHelpText>
    <label>Associate Rep Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>