unpackaged/main/default/objects/Account/fields/Associate_User__c.field-meta.xml
<CustomField>
    <fullName>Associate_User__c</fullName>
    <description>Indicates the Current User is the Associate Rep for this Account</description>
    <formula>Associate_Rep__r.Rep_User__c = True</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associate User?</label>
    <type>Checkbox</type>
</CustomField>