unpackaged/main/default/objects/Account/fields/ATS_Connect_Account_Updates__c.field-meta.xml
<CustomField>
    <fullName>ATS_Connect_Account_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags the Account as needed to be synced with GP/Salespad, because something on the Account that can be edited by Customer has changed (Billing Address, Paperless Invoice Sign Up, Tax ID, Pesticide License, etc)</description>
    <label>ATS Connect Account Updates</label>
    <type>Checkbox</type>
</CustomField>