unpackaged/main/default/objects/Account/fields/ATS_Connect_Info_Changed__c.field-meta.xml
<CustomField>
    <fullName>ATS_Connect_Info_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to update Salespad if a Customer updates their Contact Information in ATS Connect</description>
    <label>ATS Connect Info Changed?</label>
    <type>Checkbox</type>
</CustomField>