unpackaged/main/default/objects/Account/fields/Billing_Do_Not_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Do_Not_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The &#39;Do Not Email&#39; flag as set in GP/Salespad - Please Ask Collections if Changes are Needed</description>
    <inlineHelpText>The &#39;Do Not Email&#39; flag as set in GP/Salespad - Please Ask Collections if Changes are Needed</inlineHelpText>
    <label>Billing - Do Not Email</label>
    <type>Checkbox</type>
</CustomField>