unpackaged/main/default/objects/Account/fields/Billing_Do_Not_Mail__c.field-meta.xml
<CustomField>
    <fullName>Billing_Do_Not_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Syncs with &#39;Do Not Mail&#39; flag as set in GP/Salespad - Customer can change in ATS Connect (Alerts Credit and Rep)</description>
    <label>Paperless Invoices</label>
    <type>Checkbox</type>
</CustomField>