unpackaged/main/default/objects/Account/fields/Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Email__c</fullName>
    <description>Syncs with billing email in GP/Salespad (used to email Invoices if Customer also set to &#39;Paperless Invoices&#39;) - Customer can modify in ATS Connet</description>
    <label>Billing Email</label>
    <type>Email</type>
</CustomField>