unpackaged/main/default/objects/Account/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>Customer Class</description>
    <label>GP Customer Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DEFAULT</fullName>
            </value>
            <value>
                <fullName>DEALER</fullName>
            </value>
            <value>
                <fullName>AGROLOGICS</fullName>
            </value>
            <value>
                <fullName>PROGRO</fullName>
            </value>
            <value>
                <fullName>JDT</fullName>
            </value>
            <value>
                <fullName>ATSSPORTS</fullName>
            </value>
            <value>
                <fullName>DEALERWDISCOUNT</fullName>
            </value>
            <value>
                <fullName>UTA</fullName>
            </value>
            <value>
                <fullName>WALKIN</fullName>
            </value>
            <value>
                <fullName>XYLEM</fullName>
            </value>
            <value>
                <fullName>MUNICIPALITY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>