unpackaged/main/default/objects/Account/fields/Collection_Manager__c.field-meta.xml
<CustomField>
    <fullName>Collection_Manager__c</fullName>
    <description>The collection manager at ATS responsible for this account (updated from GP)</description>
    <label>Collection Manager</label>
    <length>50</length>
    <type>Text</type>
</CustomField>