unpackaged/main/default/objects/Account/fields/Collections_Rep__c.field-meta.xml
<CustomField>
    <fullName>Collections_Rep__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The contact that relates to the Collections Manager (which is integrated with ERP) - will be able to receive Chatter Notifications and Emails when relevant changes occur on the Account</description>
    <label>Collections Rep</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Collections Accounts</relationshipLabel>
    <relationshipName>Collections_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>