unpackaged/main/default/objects/Account/fields/Collections_User__c.field-meta.xml
<CustomField>
    <fullName>Collections_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user in SF that is the manager for this Account - will receive Chatter and other notifications on releveant changes to the Account/Contacts</description>
    <label>Collections User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Collection_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>