unpackaged/main/default/objects/Account/fields/Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person__c</fullName>
    <inlineHelpText>The primary billing contact for the Customer</inlineHelpText>
    <label>Primary Billing Person</label>
    <length>64</length>
    <type>Text</type>
</CustomField>