unpackaged/main/default/objects/Account/fields/corporate_office_static_address__c.field-meta.xml
<CustomField>
    <fullName>corporate_office_static_address__c</fullName>
    <description>Used on the ATS Connect &quot;My ATS Team&quot; page and the Account Detail page layout for ATS Connect Customers.</description>
    <formula>&quot;Advanced Turf Solutions&quot;&amp;
BR()&amp;
&quot;12955 Ford Dr.&quot;&amp;
BR()&amp;
&quot;Fishers, IN 46038&quot;&amp;
BR()&amp;
&quot;Phone: 877-433-7037&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corporate Office</label>
    <type>Text</type>
</CustomField>