unpackaged/main/default/objects/Account/fields/Credit_App_Contact__c.field-meta.xml
<CustomField>
    <fullName>Credit_App_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit App Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Credit App Contact)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>