unpackaged/main/default/objects/Account/fields/Credit_App_Received__c.field-meta.xml
<CustomField>
    <fullName>Credit_App_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NOTE: This will be checked moving forward when Credit Apps are completed from Salesforce, but may not reflect past credit apps received</description>
    <inlineHelpText>NOTE: This will be checked moving forward when Credit Apps are completed from Salesforce, but may not reflect past credit apps received</inlineHelpText>
    <label>Credit App Received</label>
    <type>Checkbox</type>
</CustomField>