unpackaged/main/default/objects/Account/fields/Credit_App_Sent__c.field-meta.xml
<CustomField>
    <fullName>Credit_App_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the Conga Sign Transaction was sent to this account for one of the Credit Apps</description>
    <label>Credit App Sent</label>
    <type>Checkbox</type>
</CustomField>