unpackaged/main/default/objects/Account/fields/Credit_Limit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Amount__c</fullName>
    <label>Credit Limit Amount</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>