unpackaged/main/default/objects/Account/fields/Credit_Limit_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Type__c</fullName>
    <label>Credit Limit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>