unpackaged/main/default/objects/Account/fields/Current_Brand__c.field-meta.xml
<CustomField>
    <fullName>Current_Brand__c</fullName>
    <label>What brand of spreader/sprayer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>