unpackaged/main/default/objects/Account/fields/Current_Due__c.field-meta.xml
<CustomField>
    <fullName>Current_Due__c</fullName>
    <description>AGPERAMT_1</description>
    <label>Current Due</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>