unpackaged/main/default/objects/Account/fields/Current_User__c.field-meta.xml
<CustomField>
    <fullName>Current_User__c</fullName>
    <label>Are you using a ride-on spreader/sprayer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>