unpackaged/main/default/objects/Account/fields/Current_Year_CY_Sales__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_CY_Sales__c</fullName>
    <label>Current Year CY Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>