unpackaged/main/default/objects/Account/fields/Current_Year_FY_Sales__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_FY_Sales__c</fullName>
    <description>Current FY Sales for this Account; Updated on a Schedule by Rollup Helper</description>
    <label>Current Year FY (DO NOT USE - ASK IT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>