unpackaged/main/default/objects/Account/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <description>The Customer Number that is the unique identifier used in all applications including ERP</description>
    <externalId>true</externalId>
    <label>Customer #</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>