unpackaged/main/default/objects/Account/fields/Date_30_Days_Ago__c.field-meta.xml
<CustomField>
    <fullName>Date_30_Days_Ago__c</fullName>
    <formula>TODAY() - 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is used to measure process builder collections past_due</inlineHelpText>
    <label>Date 30 Days Ago</label>
    <type>Date</type>
</CustomField>