unpackaged/main/default/objects/Account/fields/Dura_Edge_Customer__c.field-meta.xml
<CustomField>
    <fullName>Dura_Edge_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dura Edge Customer</label>
    <type>Checkbox</type>
</CustomField>