unpackaged/main/default/objects/Account/fields/Early_Order_Postcard__c.field-meta.xml
<CustomField>
    <fullName>Early_Order_Postcard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Early Order Postcard</label>
    <type>Checkbox</type>
</CustomField>