unpackaged/main/default/objects/Account/fields/EOP_Storage_Agreement__c.field-meta.xml
<CustomField>
    <fullName>EOP_Storage_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates we have sent an EOP Storage Agreement for Signature from the Customer via Conga Sign</description>
    <label>Storage Agreement Sent?</label>
    <type>Checkbox</type>
</CustomField>