unpackaged/main/default/objects/Account/fields/Equip_Age__c.field-meta.xml
<CustomField>
    <fullName>Equip_Age__c</fullName>
    <label>What are the ages of your units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>