unpackaged/main/default/objects/Account/fields/ERP_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>ERP_Create_Date__c</fullName>
    <description>The date the account was created in ATS ERP (Dynamics GP)</description>
    <label>ERP Create Date</label>
    <type>Date</type>
</CustomField>