unpackaged/main/default/objects/Account/fields/ERP_Remove_Date__c.field-meta.xml
<CustomField>
    <fullName>ERP_Remove_Date__c</fullName>
    <description>Date Deleted from ATS ERP (Dynamics GP)</description>
    <label>ERP Remove Date</label>
    <type>Date</type>
</CustomField>