unpackaged/main/default/objects/Account/fields/facility_manager_ats_location__c.field-meta.xml
<CustomField>
    <fullName>facility_manager_ats_location__c</fullName>
    <description>Used on the ATS Connect &quot;My ATS Team&quot; page and the Account Detail page layout for ATS Connect Customers.</description>
    <formula>Sales_Rep__r.Primary_Location__r.Facility_Manager__r.FirstName &amp;&quot; &quot;&amp;
Sales_Rep__r.Primary_Location__r.Facility_Manager__r.LastName</formula>
    <label>Facility Manager</label>
    <type>Text</type>
</CustomField>