unpackaged/main/default/objects/Account/fields/Fleet_Size__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Size__c</fullName>
    <description>Number of Vehicles or Crews for the Account</description>
    <inlineHelpText>How many Vehicles or Crews do they have?</inlineHelpText>
    <label>Fleet Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>