unpackaged/main/default/objects/Account/fields/FY_Rep_Forecast__c.field-meta.xml
<CustomField>
    <fullName>FY_Rep_Forecast__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Primary Rep&#39;s Annual Forecast Amount</inlineHelpText>
    <label>FY Rep Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>