unpackaged/main/default/objects/Account/fields/GIE_Lead__c.field-meta.xml
<CustomField>
    <fullName>GIE_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mass loaded cleaned up leads from GIE then mass imported new &#39;leads&#39; as accounts so management could send to reps</description>
    <label>GIE Lead</label>
    <type>Checkbox</type>
</CustomField>