unpackaged/main/default/objects/Account/fields/Goal_Check_Value__c.field-meta.xml
<CustomField>
    <fullName>Goal_Check_Value__c</fullName>
    <description>for testing only</description>
    <formula>Sales_Goal_Lookup__r.CreatedBy.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goal Check Value</label>
    <type>Text</type>
</CustomField>