unpackaged/main/default/objects/Account/fields/Hard_to_Collect__c.field-meta.xml
<CustomField>
    <fullName>Hard_to_Collect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this is a difficult account for Collections</description>
    <label>Hard to Collect</label>
    <type>Checkbox</type>
</CustomField>