unpackaged/main/default/objects/Account/fields/House_Walk_In__c.field-meta.xml
<CustomField>
    <fullName>House_Walk_In__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if this customer is actually the account used for a location&#39;s walk-in business</inlineHelpText>
    <label>House Walk-In?</label>
    <type>Checkbox</type>
</CustomField>