unpackaged/main/default/objects/Account/fields/If_Competitor__c.field-meta.xml
<CustomField>
    <fullName>If_Competitor__c</fullName>
    <description>Used to track why Customer left ATS for another competitor</description>
    <inlineHelpText>If Customer left ATS for a competitor, why?</inlineHelpText>
    <label>If Competitor</label>
    <type>TextArea</type>
</CustomField>