unpackaged/main/default/objects/Account/fields/If_Sold_Business__c.field-meta.xml
<CustomField>
    <fullName>If_Sold_Business__c</fullName>
    <description>Who the ATS Customer Sold their business to.</description>
    <inlineHelpText>Who did they sell their business to? Please provide as much Contact Information as possible.</inlineHelpText>
    <label>If Sold Business</label>
    <type>TextArea</type>
</CustomField>