unpackaged/main/default/objects/Account/fields/Invoiced_B_H__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_B_H__c</fullName>
    <description>Early orders with bill and hold arrangements - total value (7/1/2020 and later)</description>
    <label>Invoiced B/H</label>
    <summarizedField>Sales_Document__c.Doc_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_Document__c.Bill_and_Hold__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Document__c.Doc_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2021</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Document__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>