unpackaged/main/default/objects/Account/fields/JDT_Active__c.field-meta.xml
<CustomField>
    <fullName>JDT_Active__c</fullName>
    <formula>IF( 
AND( 
NOT(ISBlank(Customer__c)), 
Includes(Target_Market__c, &#39;Sports Fields&#39;)), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JDT-Active</label>
    <type>Checkbox</type>
</CustomField>