unpackaged/main/default/objects/Account/fields/JDT_Service__c.field-meta.xml
<CustomField>
    <fullName>JDT_Service__c</fullName>
    <description>Indicates if this is a JDT Service (ie &#39;S&#39;) Account</description>
    <formula>TEXT(Class__c) = &#39;JDT&#39;</formula>
    <inlineHelpText>Indicates if this is a JDT Service (ie &#39;S&#39;) Account</inlineHelpText>
    <label>JDT Service?</label>
    <type>Checkbox</type>
</CustomField>