unpackaged/main/default/objects/Account/fields/JDT_Service_Address__c.field-meta.xml
<CustomField>
    <fullName>JDT_Service_Address__c</fullName>
    <description>This is an alternative area to save any JDT service address that is not the normal billing address or shipping address</description>
    <inlineHelpText>If work site is different than billing site you can save it here</inlineHelpText>
    <label>JDT Service Address</label>
    <type>TextArea</type>
</CustomField>