unpackaged/main/default/objects/Account/fields/Key_Product_Groups__c.field-meta.xml
<CustomField>
    <fullName>Key_Product_Groups__c</fullName>
    <inlineHelpText>Key Product Groups or Types that are current or future opportunities with customer</inlineHelpText>
    <label>Key Product Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Key_Product_Groups</valueSetName>
    </valueSet>
</CustomField>