unpackaged/main/default/objects/Account/fields/Last_Collections_Note__c.field-meta.xml
<CustomField>
    <fullName>Last_Collections_Note__c</fullName>
    <inlineHelpText>From GP Collections, the most recent note activity</inlineHelpText>
    <label>Last Collections Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>