unpackaged/main/default/objects/Account/fields/Last_Document_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Document_Date__c</fullName>
    <description>Last Sales Document Date (Invoice or Return)</description>
    <inlineHelpText>Last Sales Document Date (Invoice or Return)</inlineHelpText>
    <label>Last Document Date</label>
    <summarizedField>Sales_Document__c.Doc_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_Document__c.Voided__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Document__c.Customer__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>