unpackaged/main/default/objects/Account/fields/Last_Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Transaction_Amount__c</fullName>
    <description>The last sales transaction amount for this Account (updated from ERP)</description>
    <inlineHelpText>The last sales transaction amount for this Account (updated from ERP)</inlineHelpText>
    <label>Last Transaction Amount</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>