unpackaged/main/default/objects/Account/fields/Last_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Transaction_Date__c</fullName>
    <description>The last sales transaction date for this Account (updated from ERP)</description>
    <inlineHelpText>The last sales transaction date for this Account (updated from ERP)</inlineHelpText>
    <label>Last Transaction Date</label>
    <type>Date</type>
</CustomField>