unpackaged/main/default/objects/Account/fields/Last_Year_CY_Sales__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_CY_Sales__c</fullName>
    <inlineHelpText>Sales through this date a year ago for Calendar Sales.</inlineHelpText>
    <label>Last Year CY Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>