unpackaged/main/default/objects/Account/fields/Last_Year_FY_Sales__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_FY_Sales__c</fullName>
    <description>Is a roll up field one filter must be start of the year you want to measure from I.E. 10/1/2017 and LAST_N_DAYS:365 will give you today minus a year</description>
    <inlineHelpText>Sales through this date a year ago for Fiscal Sales.</inlineHelpText>
    <label>2 Years Ago (DO NOT USE - ASK IT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>