unpackaged/main/default/objects/Account/fields/Lead_Account__c.field-meta.xml
<CustomField>
    <fullName>Lead_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if this is a lead account</inlineHelpText>
    <label>Lead Account</label>
    <type>Checkbox</type>
</CustomField>