unpackaged/main/default/objects/Account/fields/Lead_Message__c.field-meta.xml
<CustomField>
    <fullName>Lead_Message__c</fullName>
    <description>Maps from Message on Lead Source; website comments usually in this field</description>
    <label>Lead Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>