unpackaged/main/default/objects/Account/fields/Lead_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lead_Stage__c</fullName>
    <defaultValue>&quot;New Lead&quot;</defaultValue>
    <description>Indicates what stage the Lead Account is in the Sales Process</description>
    <inlineHelpText>Indicates what stage the Lead Account is in the Sales Process</inlineHelpText>
    <label>Lead Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unqualified</fullName>
            </value>
            <value>
                <fullName>New Lead</fullName>
            </value>
            <value>
                <fullName>New Lead (SGM)</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Nurturing</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>