unpackaged/main/default/objects/Account/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <inlineHelpText>The Level of the Athletic Customer</inlineHelpText>
    <label>Level (Athletic)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Level_Athletic</valueSetName>
    </valueSet>
</CustomField>